--- a/s3/student/chat.html
+++ b/s3/student/chat.html
@@ -111,7 +111,8 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <div class="user-profile-wrap shadow-reset" style="margin-bottom: 15px; margin-top: 15px">
-                        <h3>Quote</h3>
+                        <h3 style="text-align:center;">Quote</h3>
+                        <p>When it rains, look for rainbows. When it's dark, look for stars.</p>
                     </div>
                 </div>
             </div>
